<resources>
    <string name="app_name">Tokona</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="powered_by_aditya_agus_wisanto">Powered by Aditya Agus Wisanto</string>
    <string name="login_dengan_akun_anda_untuk_melanjutkan">Login dengan akun Anda untuk melanjutkan</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="aditya_agus_wisanto">Aditya Agus Wisanto</string>
    <string name="_2311600015_staff_it">2311600015 - Staff IT</string>
    <string name="member_since">Member Since</string>
    <string name="_05_03_2025">05-03-2025</string>
    <string name="location">Location</string>
    <string name="tangerang_pasarkemis">Tangerang, Pasarkemis</string>
    <string name="working_hours">Working Hours</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="cari_nama_toko_atau_kode_toko">Cari nama toko atau kode toko</string>
    <string name="e678901">E678901</string>
    <string name="toko_hj_ical">Toko Hj. Ical</string>
    <string name="_05_maret_2025_14_02_33">05 Maret 2025, 14:02:33</string>
    <string name="check_in">Check in</string>
    <string name="absensi">Absensi</string>
    <string name="silakan_pilih_sesuai_dengan_kondisi_anda">Silakan pilih sesuai dengan kondisi Anda</string>
    <string name="selesai">Selesai</string>
    <string name="masuk_kerja">Masuk Kerja</string>
    <string name="absen">Absen</string>
    <string name="inventory">Inventory</string>
    <string name="detail_address">Detail Address</string>
    <string name="susu_kental_manis">Susu kental manis</string>
    <string name="_200ml_gram_untuk_1_kaleng">200Ml gram untuk 1 kaleng</string>
    <string name="rp16_000">Rp16.000</string>
    <string name="informasi_produk">Informasi Produk</string>
    <string name="mohon_maaf_data_tidak_tersedia">Mohon maaf, data tidak tersedia</string>
    <string name="product">Product</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="deskripsi_produk">Deskripsi Produk</string>
    <string name="status">Status</string>
    <string name="ya_barang_tersedia">Ya, barang tersedia</string>
    <string name="qr_code">Qr Code</string>
    <string name="tutup">Tutup</string>
    <string name="promo">Promo</string>
    <string name="pilih_produk">Pilih Produk</string>
    <string name="harga_asal">Harga Asal</string>
    <string name="harga_diskon">Harga Diskon</string>
    <string name="aktifkan_promo">Aktifkan Promo</string>
    <string name="pilih_menu">Pilih Menu</string>
    <string name="detail_produk">Detail Produk</string>
    <string name="lihat_nama_deskripsi_dan_status_ketersediaan_produk">Lihat nama, deskripsi, dan status ketersediaan.</string>
    <string name="buat_promo">Buat Promo</string>
    <string name="tentukan_harga_diskon_dan_periode_berlaku">Tentukan harga diskon dan periode berlaku.</string>
    <string name="lihat">Lihat</string>
    <string name="pilih">Pilih</string>
    <string name="cari_kode_produk_atau_nama_produk">Cari kode produk atau nama produk</string>
    <string name="tanggal_akhir_diskon">Tanggal Akhir Diskon</string>
    <string name="x">x</string>
    <string name="apakah_kamu_yakin_ingin_keluar">Apakah kamu yakin ingin keluar?</string>
    <string name="ya_keluar">Ya, keluar</string>
    <string name="some_error_occurred">Some Error Occurred</string>
    <string name="refresh">Refresh</string>
    <string name="kamu_belum_melakukan_absensi">Kamu belum melakukan absensi</string>
</resources>