<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/product"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_close"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/nama_produk"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/nama_produk"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/deskripsi_produk"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/deskripsi_produk"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/status"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/cbAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/ya_barang_tersedia"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAvailable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/selesai"
        android:textColor="@color/white"
        app:backgroundTint="@color/orange"
        app:cornerRadius="8dp" />

    <ProgressBar
        android:id="@+id/pbProduct"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:indeterminateTint="@color/orange"
        android:visibility="gone" />

</LinearLayout>