<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/promo"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ivClose"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_close"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/nama_produk"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/nama_produk"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/deskripsi_produk"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/deskripsi_produk"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/harga_asal"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/harga_asal"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/harga_diskon"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeWidth="1dp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/harga_diskon"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/tanggal_akhir_diskon"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:boxCornerRadiusBottomEnd="12dp"
        app:boxCornerRadiusBottomStart="12dp"
        app:boxCornerRadiusTopEnd="12dp"
        app:boxCornerRadiusTopStart="12dp"
        app:boxStrokeWidth="1dp"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:drawablePadding="8dp"
            android:focusable="false"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/tanggal_akhir_diskon"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="none"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnPromo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/buat_promo"
        android:textColor="@color/white"
        app:backgroundTint="@color/orange"
        app:cornerRadius="8dp" />

    <ProgressBar
        android:id="@+id/pbPromo"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:indeterminateTint="@color/orange"
        android:visibility="gone" />

</LinearLayout>